syntax = "proto3";

package auth;

/// Authentication gRPC service
service AuthService {
  /// Register a new user
  rpc Register(RegisterRequest) returns (RegisterResponse);

  /// Login and receive a JWT token
  rpc Login(LoginRequest) returns (LoginResponse);

  /// Get current user info from a JWT token
  rpc GetMe(GetMeRequest) returns (GetMeResponse);

  /// Validate a JWT token (for inter-service auth)
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  optional string display_name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string email = 2;
  optional string display_name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string email = 3;
  optional string display_name = 4;
}

message GetMeRequest {
  string token = 1;
}

message GetMeResponse {
  string user_id = 1;
  string email = 2;
  optional string display_name = 3;
  bool is_active = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}
